--- a/analyses/first_run/first_run.Rmd
+++ b/analyses/first_run/first_run.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Example Analysis"
-author: "Nate"
-date: "04/03/2020"
+title: "First Run"
+author: "David K, Nate"
+date: "04/29/2020"
 output: 
   github_document:
     toc: true
